# llm-search-judge

./: Evaluate.ipynb  README.md  collect.sh  connect.sh  pyproject.toml
data/: both_ways_desc_both_ways_category_both_ways_captions_both_ways_brand_both_ways_all_fields.pkl
local_llm_judge/: compare.py  daydream_data.py  es_metadata.py  eval_agent.py  file_memoize.py  image_fetch.py  log_stdout.py  main.py  openai.py  qwen_vlm.py  search_backend.py  train.py
