[tool.poetry]
name = "local-llm-judge"
version = "0.1.0"
description = ""
authors = ["Doug Turnbull <softwaredoug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
pandas = "^2.2.3"
mlx = "^0.22.0"
mlx-lm = "^0.21.0"
prompt-toolkit = "^3.0.48"
scikit-learn = "^1.6.1"
mlx-vlm = "^0.1.11"
pillow = "^11.1.0"
graphviz = "^0.20.3"
google-cloud-secret-manager = "^2.22.1"
jupyter = "^1.1.1"
pyarrow = "17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
